--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.67.1",
     "@sentry/nextjs": "^8.45.0",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
     "motion": "^11.13.5",
-    "next": "15.1.0",
+    "next": "^15.1.1-canary.16",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.3-canary.1",
     "next-themes": "^0.4.4",
